// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-74"
>
  <label
    className="ms-Label root-75"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-76"
    data-is-focusable={true}
    id="id__20"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-77"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-81 ms-Button-icon icon-79"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-74"
>
  <label
    className="ms-Label root-75"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-76"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-77"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-81 ms-Button-icon icon-79"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch Card Default 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-82"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-82"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-83"
      >
        <div
          className="ms-StackItem css-84"
        >
          <div
            className="ms-Stack css-85"
          >
            <div
              className="ms-TextField root-86"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-75"
                  htmlFor="TextField24"
                  id="TextFieldLabel26"
                >
                  Hours
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-64"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel26"
                    className="ms-TextField-field field-65"
                    id="TextField24"
                    max={24}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="12"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField root-86"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <label
                  className="ms-Label root-75"
                  htmlFor="TextField27"
                  id="TextFieldLabel29"
                >
                  Minutes
                </label>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-64"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel29"
                    className="ms-TextField-field field-65"
                    id="TextField27"
                    max={59}
                    min={0}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="32"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-84"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline root-87"
          >
            <div
              className="ms-MessageBar-content content-88"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-89"
              >
                <i
                  aria-hidden={true}
                  className="icon-96"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-91"
                id="MessageBar30"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-92"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-97"
      >
        <div
          className="ms-StackItem css-84"
        />
        <div
          className="ms-StackItem css-84"
        >
          <button
            className="ms-Button ms-Button--primary root-98"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-77"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-100 ms-Button-icon icon-79"
                data-icon-name="Clock"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-78"
              >
                <span
                  className="ms-Button-label label-99"
                  id="id__31"
                >
                  Add Scheduled Slot
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
      <span
        className="css-82"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        dir="ltr"
      >
        <div
          className="ms-TooltipHost root-101"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="ms-ProgressIndicator root-102"
          >
            <div
              className="ms-ProgressIndicator-itemName itemName-103"
            >
              Punched
            </div>
            <div
              className="ms-ProgressIndicator-itemProgress itemProgress-105"
            >
              <div
                className="ms-ProgressIndicator-progressTrack progressTrack-106"
              />
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={40}
                className="ms-ProgressIndicator-progressBar progressBar-107"
                role="progressbar"
                style={
                  Object {
                    "transition": undefined,
                    "width": "40%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch Card With Hook 1`] = `
<div>
  <div
    className="ms-Grid"
  >
    <div
      className="ms-Grid-row"
    >
      <div
        className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
      >
        <span
          className="css-82"
        >
          <h2>
            
          </h2>
        </span>
      </div>
    </div>
    <div
      className="ms-Grid-row"
    >
      <div
        className="ms-Grid-col ms-sm12 ms-md6"
      >
        <span
          className="css-82"
        >
          <h3>
            Goal For The Day
          </h3>
        </span>
        <div
          className="ms-Stack css-83"
        >
          <div
            className="ms-StackItem css-84"
          >
            <div
              className="ms-Stack css-85"
            >
              <div
                className="ms-TextField root-108"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-Stack css-74"
                  >
                    <label
                      className="ms-Label root-75"
                    >
                      Hours
                    </label>
                    <button
                      className="ms-Button ms-Button--icon root-76"
                      data-is-focusable={true}
                      id="id__38"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      title="Info"
                      type="button"
                    >
                      <span
                        className="ms-Button-flexContainer flexContainer-77"
                        data-automationid="splitbuttonprimary"
                      >
                        <i
                          aria-hidden={true}
                          className="ms-Icon root-37 css-81 ms-Button-icon icon-79"
                          data-icon-name="Info"
                          role="presentation"
                          style={
                            Object {
                              "fontFamily": "\\"FabricMDL2Icons\\"",
                            }
                          }
                        >
                          
                        </i>
                      </span>
                    </button>
                  </div>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-64"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel37"
                      className="ms-TextField-field field-65"
                      id="TextField35"
                      max={24}
                      min={0}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      type="number"
                      value="09"
                    />
                  </div>
                </div>
              </div>
              <div
                className="ms-TextField root-108"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-Stack css-74"
                  >
                    <label
                      className="ms-Label root-75"
                    >
                      Minutes
                    </label>
                    <button
                      className="ms-Button ms-Button--icon root-76"
                      data-is-focusable={true}
                      id="id__45"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      title="Info"
                      type="button"
                    >
                      <span
                        className="ms-Button-flexContainer flexContainer-77"
                        data-automationid="splitbuttonprimary"
                      >
                        <i
                          aria-hidden={true}
                          className="ms-Icon root-37 css-81 ms-Button-icon icon-79"
                          data-icon-name="Info"
                          role="presentation"
                          style={
                            Object {
                              "fontFamily": "\\"FabricMDL2Icons\\"",
                            }
                          }
                        >
                          
                        </i>
                      </span>
                    </button>
                  </div>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-64"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel44"
                      className="ms-TextField-field field-65"
                      disabled={false}
                      id="TextField42"
                      max={59}
                      min={0}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      type="number"
                      value="00"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-StackItem css-84"
          >
            <div
              className="ms-MessageBar ms-MessageBar-multiline root-109"
            >
              <div
                className="ms-MessageBar-content content-88"
              >
                <div
                  aria-hidden={true}
                  className="ms-MessageBar-icon iconContainer-89"
                >
                  <i
                    aria-hidden={true}
                    className="icon-96"
                    data-icon-name="Info"
                  >
                    
                  </i>
                </div>
                <div
                  aria-live="polite"
                  className="ms-MessageBar-text text-91"
                  id="MessageBar49"
                  role="status"
                >
                  <span
                    className="ms-MessageBar-innerText innerText-92"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-Grid-row"
    >
      <div
        className="ms-Grid-col ms-sm-12 ms-md6"
      >
        <div
          className="ms-Stack css-97"
        >
          <div
            className="ms-StackItem css-84"
          />
          <div
            className="ms-StackItem css-84"
          >
            <button
              className="ms-Button ms-Button--primary root-98"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-77"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-110 ms-Button-icon icon-79"
                  data-icon-name="Leave"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons-15\\"",
                    }
                  }
                >
                  
                </i>
                <span
                  className="ms-Button-textContainer textContainer-78"
                >
                  <span
                    className="ms-Button-label label-99"
                    id="id__50"
                  >
                    Start Your Day
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <span
          className="css-82"
        >
          <h3>
            Scheduled
          </h3>
        </span>
        <div
          dir="ltr"
        >
          <div
            className="ms-TooltipHost root-101"
            onBlurCapture={[Function]}
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="ms-ProgressIndicator root-102"
            >
              <div
                className="ms-ProgressIndicator-itemName itemName-103"
              >
                Punched
              </div>
              <div
                className="ms-ProgressIndicator-itemProgress itemProgress-105"
              >
                <div
                  className="ms-ProgressIndicator-progressTrack progressTrack-106"
                />
                <div
                  aria-valuemax={100}
                  aria-valuemin={0}
                  aria-valuenow={NaN}
                  className="ms-ProgressIndicator-progressBar progressBar-107"
                  role="progressbar"
                  style={
                    Object {
                      "transition": undefined,
                      "width": "NaN%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="ms-Stack css-111"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="ms-Stack css-111"
      >
        <div
          className="ms-TextField root-63"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-64"
            >
              <input
                aria-invalid={false}
                className="ms-TextField-field field-65"
                id="TextField54"
                name="punchCardTitle"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                placeholder="Punch Card Title..."
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          aria-disabled={true}
          className="ms-Button ms-Button--primary is-disabled root-112"
          data-is-focusable={false}
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="submit"
        >
          <span
            className="ms-Button-flexContainer flexContainer-77"
            data-automationid="splitbuttonprimary"
          >
            <span
              className="ms-Button-textContainer textContainer-78"
            >
              <span
                className="ms-Button-label label-99"
                id="id__57"
              >
                Add Punch Card
              </span>
            </span>
          </span>
        </button>
      </div>
    </form>
    <div
      className="ms-StackItem css-84"
    >
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--primary is-disabled root-112"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-77"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-78"
          >
            <span
              className="ms-Button-label label-99"
              id="id__60"
            >
              Show Punch Cards
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots POCs/Test Editing Array Of Input Fields 1`] = `
Array [
  <div
    className="ms-TextField root-63"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-64"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-65"
          id="TextField8"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="12:00"
        />
      </div>
    </div>
  </div>,
  <div
    className="ms-TextField root-63"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-64"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-65"
          id="TextField11"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="13:00"
        />
      </div>
    </div>
  </div>,
  <div
    className="ms-TextField root-63"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-64"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-65"
          id="TextField14"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="14:00"
        />
      </div>
    </div>
  </div>,
  <pre>
    {
  "fields": [
    {
      "inputVal": "12:00",
      "inTime": 1606199400000
    },
    {
      "inputVal": "13:00",
      "inTime": 1606203000000
    },
    {
      "inputVal": "14:00",
      "inTime": "14:00"
    }
  ]
}
  </pre>,
]
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-43"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-51 ms-Pivot root-44"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-52"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-60"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-45"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-43"
        >
          <span
            className="css-61"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
